# gestao

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
api/: settings.py  urls.py
api/atividade/: apps.py
api/atividade/migrations/: 0001_initial.py
api/atividade/models/: atividade.py
api/atividade/serializers/: atividade.py
api/atividade/views/: atividade.py
api/tarefa/: apps.py
api/tarefa/migrations/: 0001_initial.py
api/tarefa/models/: tarefa.py
api/tarefa/serializers/: tarefa.py
api/tarefa/views/: tarefa.py
api/usuario/migrations/: 0001_initial.py
api/usuario/models/: usuario.py
api/usuario/serializers/: usuario.py
api/usuario/views/: usuario.py
